--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "/src",
     "/dist"
   ],
-  "repository": "git@github.com:eKoopmans/html2pdf.js.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nobe-team/html2pdf.js.git"
+  },
   "keywords": [
     "javascript",
     "pdf-generation",
