--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "index.d.ts",
   "files": [
     "/src",
-    "/dist"
+    "/dist",
+    "index.d.ts"
   ],
   "repository": {
     "type": "git",
